--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,26 @@
 .mybox > li > h2.done {
     text-decoration:line-through
 }
+
+.mydone > li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    margin-bottom: 10px;
+    min-height: 48px;
+}
+.mydone > li > h2 {
+    max-width: 75%;
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: auto;
+    margin-bottom: 0px;
+}
+.mydone > li > h2.done {
+    text-decoration:line-through
+}
 #cancel:hover {
     background-color: black;
     color: white;
