--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,9 @@
         <p class="showBucket">내용을 입력해주세요.</p>
     </div>
     <div class="mybox" id="bucket-list">
+        <div class="mydone" id="done">
+
+        </div>
     </div>
     <script src="../static/js/feature.js"></script>
 </body>
